--- a/Users.yml
+++ b/Users.yml
@@ -3,7 +3,7 @@ spring:
     name: user-service
   datasource:
     driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/postman
+    url: jdbc:postgresql://localhost:5432/userauthentication
     username: postgres
     password: Saketh@123$
 server:
